Added school folder shortcut

--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -399,6 +399,8 @@ map gR eval fm.cd(ranger.RANGERDIR)
 map g/ cd /
 map g? cd /usr/share/doc/ranger
 
+map gE cd ~/Documents/Ecole/HEH/MA0
+
 # External Programs
 map E  edit
 map du shell -p du --max-depth=1 -h --apparent-size
