--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -212,6 +212,22 @@ mode "$mode_system" {
 
 bindsym $mod+Pause mode "$mode_system"
 
+# Mode screen capture
+set $mode_screen_capture capture
+set $screen_capture_command scrot -q 100
+mode "$mode_screen_capture" {
+    bindsym --release s exec --no-startup-id $screen_capture_command, mode "default"
+    bindsym --release Shift+s exec --no-startup-id $screen_capture_command -s, mode "default"
+    bindsym --release w exec --no-startup-id $screen_capture_command -u, mode "default"
+
+    # back to normal: Enter or Escape
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+
+bindsym Mod1+Sys_Req mode "$mode_screen_capture"
+
+
 
 
 # ==============================================================================
