Added tmux for macos compatibility

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -112,8 +112,8 @@ unbind -T copy-mode-vi 'MouseDragEnd1Pane'
 # =============================================================================
 
 # Edit the number of colors to show
-set -g default-terminal "tmux-256color"
-set-option -ga terminal-overrides ",*256col*:Tc"
+#set -g default-terminal "tmux-256color"
+#set-option -ga terminal-overrides ",*256col*:Tc"
 
 # Set the colors variables
 background="#282a36"
