--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -51,6 +51,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -sel clip
 bind-key p run "xclip -o -sel clip | tmux load-buffer - ; tmux paste-buffer"
 # Fix mouse copy-mode jumps to bottom
 unbind -T copy-mode-vi 'MouseDragEnd1Pane'
+unbind -T copy-mode 'MouseDragEnd1Pane'
 
 # Window {
     # Focus {
@@ -107,54 +108,85 @@ unbind -T copy-mode-vi 'MouseDragEnd1Pane'
     # }
 # }
 
+# Edit the number of colors to show
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",*256col*:Tc"
+
 # =============================================================================
 # Theme
 # =============================================================================
 
-# Edit the number of colors to show
-#set -g default-terminal "tmux-256color"
-#set-option -ga terminal-overrides ",*256col*:Tc"
+## COLORSCHEME: gruvbox dark
+set-option -g status "on"
 
-# Set the colors variables
-background="#282a36"
-foreground="#f8f8f2"
-currentLine="#44475a"
-selection="#44475a"
-comment="#6272a4"
-cyan="#8be9fd"
-green="#50fa7b"
-orange="#ffb86c"
-pink="#ff79c6"
-purple="#bd93f9"
-red="#ff5555"
-yellow="#f1fa8c"
+# default statusbar colors
+set-option -g status-bg colour237 #bg1
+set-option -g status-fg colour223 #fg1
 
-# Edit the border
-set -g pane-border-bg $background
-set -g pane-border-fg $selection
-set -g pane-active-border-bg $background
-set -g pane-active-border-fg $pink
+# default window title colors
+set-window-option -g window-status-bg colour214 #yellow
+set-window-option -g window-status-fg colour237 #bg1
 
-# Status bar {
-    # Edit the status line
-    set -g status-position bottom
-    set -g status-bg $background
-    set -g status-fg $foreground
-    set -g status-attr dim
-    set -g status-left "#[fg=$background,bg=$purple,bold]#S"
-    set -g status-right "#[fg=$background,bg=$purple,bold]%a, %d %b %Y %H:%M"
+set-window-option -g window-status-activity-bg colour237 #bg1
+set-window-option -g window-status-activity-fg colour248 #fg3
 
-    # Edit the window
-    setw -g window-status-current-fg $background
-    setw -g window-status-current-bg $pink
-    setw -g window-status-current-attr bold
+# active window title colors
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-fg colour237 #bg1
 
-    setw -g window-status-fg $background
-    setw -g window-status-bg $currentLine
-    setw -g window-status-attr none
-    set -g window-status-separator ''
+# pane border
+set-option -g pane-active-border-fg colour250 #fg2
+set-option -g pane-border-fg colour237 #bg1
 
-    setw -g window-status-bell-attr bold
-    setw -g window-status-bell-fg $foreground
-    setw -g window-status-bell-bg $red
-# }
+# message infos
+set-option -g message-bg colour239 #bg2
+set-option -g message-fg colour223 #fg1
+
+# writting commands inactive
+set-option -g message-command-bg colour239 #fg3
+set-option -g message-command-fg colour223 #bg1
+
+# pane number display
+set-option -g display-panes-active-colour colour250 #fg2
+set-option -g display-panes-colour colour237 #bg1
+
+# clock
+set-window-option -g clock-mode-colour colour109 #blue
+
+# bell
+set-window-option -g window-status-bell-style fg=colour235,bg=colour167 #bg, red
+
+
+## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
+set-option -g status-attr "none"
+set-option -g status-justify "left"
+set-option -g status-left-attr "none"
+set-option -g status-left-length "80"
+set-option -g status-right-attr "none"
+set-option -g status-right-length "80"
+set-window-option -g window-status-activity-attr "none"
+set-window-option -g window-status-attr "none"
+set-window-option -g window-status-separator ""
+
+set-option -g status-left "#[fg=colour248, bg=colour241] #S #[fg=colour241, bg=colour237, nobold, noitalics, nounderscore]"
+set-option -g status-right "#[fg=colour239, bg=colour237, nobold, nounderscore, noitalics]#[fg=colour246,bg=colour239] CPU:#{cpu_percentage}  #{battery_icon}#{battery_percentage}  %a, %d %b %Y  %H:%M #[fg=colour248, bg=colour239, nobold, noitalics, nounderscore]#[fg=colour237, bg=colour248] #h "
+
+set-window-option -g window-status-current-format "#[fg=colour239, bg=colour248, :nobold, noitalics, nounderscore]#[fg=colour239, bg=colour214] #I #[fg=colour239, bg=colour214, bold] #W #[fg=colour214, bg=colour237, nobold, noitalics, nounderscore]"
+set-window-option -g window-status-format "#[fg=colour237,bg=colour239,noitalics]#[fg=colour223,bg=colour239] #I #[fg=colour223, bg=colour239] #W #[fg=colour239, bg=colour237, noitalics]"
+
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Other examples:
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-battery'
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
+
+
