Update tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -182,6 +182,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # Other examples:
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-open'
+# set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
