--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,8 +32,8 @@ set -g status-interval 60
 # Prefix key
 # I choose M-Space because it doesn't interfere with Vim
 unbind C-b
-set -g prefix M-Space
-bind M-Space send-prefix
+set -g prefix C-Space
+bind C-Space send-prefix
 
 # Same directory
 
