Update tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,9 +31,9 @@ set -g status-interval 60
 
 # Prefix key
 # I choose M-Space because it doesn't interfere with Vim
-unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
+# unbind C-b
+# set -g prefix C-Space
+# bind C-Space send-prefix
 
 # Same directory
 
