Update nvim, git and tmux config

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -9,6 +9,7 @@
     bD     = branch -D
     co     = checkout
     cob    = checkout -b
+    com    = checkout master
     cl     = clone
     c      = commit
     ca     = commit --amend
