--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -109,8 +109,8 @@ unbind -T copy-mode 'MouseDragEnd1Pane'
 # }
 
 # Edit the number of colors to show
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",*256col*:Tc"
+set -g default-terminal "tmux-256color"
+set-option -ga terminal-overrides ",xterm-termite:Tc"
 
 # =============================================================================
 # Theme
