--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,9 +31,9 @@ set -g status-interval 60
 
 # Prefix key
 # I choose M-Space because it doesn't interfere with Vim
-# unbind C-b
-# set -g prefix C-Space
-# bind C-Space send-prefix
+unbind C-b
+set -g prefix M-Space
+bind M-Space send-prefix
 
 # Same directory
 
@@ -124,27 +124,22 @@ set-option -g status-bg colour237 #bg1
 set-option -g status-fg colour223 #fg1
 
 # default window title colors
-set-window-option -g window-status-bg colour214 #yellow
-set-window-option -g window-status-fg colour237 #bg1
+set-window-option -g window-status-style bg=colour214,fg=colour237 #yellow
 
-set-window-option -g window-status-activity-bg colour237 #bg1
-set-window-option -g window-status-activity-fg colour248 #fg3
+set-window-option -g window-status-activity-style bg=colour237,fg=colour248 #bg1
 
 # active window title colors
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-fg colour237 #bg1
+set-window-option -g window-status-current-style bg=default,fg=colour237
 
 # pane border
-set-option -g pane-active-border-fg colour250 #fg2
-set-option -g pane-border-fg colour237 #bg1
+set-option -g pane-active-border-style fg=colour250 #fg2
+set-option -g pane-border-style fg=colour237 #bg1
 
 # message infos
-set-option -g message-bg colour239 #bg2
-set-option -g message-fg colour223 #fg1
+set-option -g message-style bg=colour239,fg=colour223 #bg2
 
 # writting commands inactive
-set-option -g message-command-bg colour239 #fg3
-set-option -g message-command-fg colour223 #bg1
+set-option -g message-command-style bg=colour239,fg=colour223 #fg3
 
 # pane number display
 set-option -g display-panes-active-colour colour250 #fg2
@@ -158,14 +153,14 @@ set-window-option -g window-status-bell-style fg=colour235,bg=colour167 #bg, red
 
 
 ## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
-set-option -g status-attr "none"
+set-option -g status-style none
 set-option -g status-justify "left"
-set-option -g status-left-attr "none"
+set-option -g status-left-style none
 set-option -g status-left-length "80"
-set-option -g status-right-attr "none"
+set-option -g status-right-style none
 set-option -g status-right-length "80"
-set-window-option -g window-status-activity-attr "none"
-set-window-option -g window-status-attr "none"
+set-window-option -g window-status-activity-style none
+set-window-option -g window-status-style none
 set-window-option -g window-status-separator ""
 
 set-option -g status-left "#[fg=colour248, bg=colour241] #S #[fg=colour241, bg=colour237, nobold, noitalics, nounderscore]"
