--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,54 +1,43 @@
 [user]
-	email = guillaume.quittet@gmail.com
-	name = Guillaume Quittet
+    email = guillaume.quittet@gmail.com
+    name  = Guillaume Quittet
+
 [alias]
-    b      = branch
-    ba     = branch -a
-    bd     = branch -d
-    bdm    = "!git branch --merged | grep -v '*' | xargs -n 1 git branch -d"
-    bD     = branch -D
-    co     = checkout
-    cob    = checkout -b
-    com    = checkout master
-    cl     = clone
-    c      = commit
-    ca     = commit --amend
-    cam    = commit --amend -m
-    cm     = commit -m
-    cem    = commit --allow-empty -m
-    dc     = diff --cached
-    f      = fetch -p
-    m      = merge --no-ff
-    mf     = merge
-    mfs    = merge --squash
-    p      = push
-    pl     = pull
-    pu     = push -u
-    puo    = push -u origin
-    pom    = push origin master
-    pomt   = push origin master --tags
-    ri     = rebase -i
-    rim    = rebase -i master
-    riom   = rebase -i origin/master
-    rs     = reset
-    rsh    = reset --hard
-    rshm   = reset --hard origin/master
+    rim  = rebase -i master
+    riom = rebase -i origin/master
 
-    st = status -sb
-    a  = add
-    ap = add -p
+    cad   = "!f() { git log --pretty='format:%C(yellow)%h %aD%Cred%d %Creset%s%C(cyan) [%cn]' --decorate --after=\"$1 0:00\" --before=\"$1 23:59\"; }; f"
+    mcad  = "!f() { git log --pretty='format:%C(yellow)%h %aD%Cred%d %Creset%s%C(cyan) [%cn]' --decorate --after=\"$1 0:00\" --before=\"$1 23:59\" --author \"`git config user.name`\"; }; f"
+    ; lcbc  = log --first-parent --abbrev-commit --pretty=format:'%C(dim white)- %C(reset)%C(yellow)[%h]%C(reset) %C(white)%s%C(reset) %C(cyan)(%an)%C(reset) %C(dim white)%aD%C(reset)'
+    lcbc  = ! git log --oneline --color | emojify | less -r
+    lg    = !git lg2
+    lg1   = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+    lg2   = log --graph --abbrev-commit --decorate --pretty=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
+    lg3   = log --graph --abbrev-commit --decorate --pretty=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)' --all
+    lg4   = log --graph --abbrev-commit --decorate --pretty=format:'%C(yellow)%h%C(reset)%C(auto)%d%C(reset) %C(normal)%s%C(reset) %C(dim white)%an%C(reset) %C(dim blue)(%ar)%C (reset)' --all
+    mcad  = "!f() { git log --pretty='format:%C(yellow)%h %aD%Cred%d %Creset%s%C(cyan) [%cn]' --decorate --after=\"$1 0:00\" --before=\"$1 23:59\" --author \"`git config user.name`\"; }; f"
+    ; mlcbc = "!f() { git log --first-parent --abbrev-commit --author \"`git config user.name`\" --pretty=format:'%C(dim white)- %C(reset)%C(yellow)[%h]%C(reset) %C(white)%s%C(reset) %C(cyan)(%an)%C(reset) %C(dim white)%aD%C(reset)'; }; f"
+    mlcbc  = "! git log --oneline --color --author=\"`git config user.name`\" | emojify | less -r"
+    plg   = git log --graph --pretty='format:%C(red)%d%C(reset) %C(yellow)%h%C(reset) %ar %C(green)%aN%C(reset) %s'
+    plog  = log --graph --pretty=format:'%h -%d %s %n' --abbrev-commit --date=relative --branches
+    tlg   = ! git log --stat --since='1 Day Ago' --graph --pretty=oneline --abbrev-commit --date=relative
 
-    adog = "log --all --decorate --oneline --graph"
-    cad = "!f() { git log --pretty='format:%C(yellow)%h %aD%Cred%d %Creset%s%C(cyan) [%cn]' --decorate --after=\"$1 0:00\" --before=\"$1 23:59\"; }; f"
-    mcad = "!f() { git log --pretty='format:%C(yellow)%h %aD%Cred%d %Creset%s%C(cyan) [%cn]' --decorate --after=\"$1 0:00\" --before=\"$1 23:59\" --author \"`git config user.name`\"; }; f"
-    lcbc = log --first-parent --abbrev-commit --pretty=format:'%C(dim white)- %C(reset)%C(yellow)[%h]%C(reset) %C(white)%s%C(reset) %C(cyan)(%an)%C(reset) %C(dim white)%aD%C(reset)'
-    lg   = !"git lg2"
-    lg1  = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
-    lg2  = log --graph --abbrev-commit --decorate --pretty=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
-    lg3  = log --graph --abbrev-commit --decorate --pretty=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)' --all
-    lg4  = log --graph --abbrev-commit --decorate --pretty=format:'%C(yellow)%h%C(reset)%C(auto)%d%C(reset) %C(normal)%s%C(reset) %C(dim white)%an%C(reset) %C(dim blue)(%ar)%C (reset)' --all
-    mcad = "!f() { git log --pretty='format:%C(yellow)%h %aD%Cred%d %Creset%s%C(cyan) [%cn]' --decorate --after=\"$1 0:00\" --before=\"$1 23:59\" --author \"`git config user.name`\"; }; f"
-    mlcbc = "!f() { git log --first-parent --abbrev-commit --author \"`git config user.name`\" --pretty=format:'%C(dim white)- %C(reset)%C(yellow)[%h]%C(reset) %C(white)%s%C(reset) %C(cyan)(%an)%C(reset) %C(dim white)%aD%C(reset)'; }; f"
-    plg  = log --graph --pretty='format:%C(red)%d%C(reset) %C(yellow)%h%C(reset) %ar %C(green)%aN%C(reset) %s'
-    rank = shortlog -sn --no-merges
-    tlg  = log --stat --since='1 Day Ago' --graph --pretty=oneline --abbrev-commit --date=relative
+[core]
+    ignorecase = false
+    pager = diff-so-fancy | less --tabs=4 -RFX
+[color]
+    ui = true
+[color "diff-highlight"]
+    oldNormal = red bold
+    oldHighlight = red bold 52
+    newNormal = green bold
+    newHighlight = green bold 22
+[color "diff"]
+    meta = 11
+    frag = magenta bold
+    commit = yellow bold
+    old = red bold
+    new = green bold
+    whitespace = red reverse
+[commit]
+    template = /Users/gquittet/.gitmessage
