--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,21 +3,16 @@
     name  = Guillaume Quittet
 
 [alias]
-    rim  = rebase -i master
-    riom = rebase -i origin/master
-
     cad   = "!f() { git log --pretty='format:%C(yellow)%h %aD%Cred%d %Creset%s%C(cyan) [%cn]' --decorate --after=\"$1 0:00\" --before=\"$1 23:59\"; }; f"
     mcad  = "!f() { git log --pretty='format:%C(yellow)%h %aD%Cred%d %Creset%s%C(cyan) [%cn]' --decorate --after=\"$1 0:00\" --before=\"$1 23:59\" --author \"`git config user.name`\"; }; f"
     ; lcbc  = log --first-parent --abbrev-commit --pretty=format:'%C(dim white)- %C(reset)%C(yellow)[%h]%C(reset) %C(white)%s%C(reset) %C(cyan)(%an)%C(reset) %C(dim white)%aD%C(reset)'
-    lcbc  = ! git log --oneline --color | emojify | less -r
-    lg    = !git lg2
+    ; lg    = !git lg2
     lg1   = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
     lg2   = log --graph --abbrev-commit --decorate --pretty=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
     lg3   = log --graph --abbrev-commit --decorate --pretty=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)' --all
     lg4   = log --graph --abbrev-commit --decorate --pretty=format:'%C(yellow)%h%C(reset)%C(auto)%d%C(reset) %C(normal)%s%C(reset) %C(dim white)%an%C(reset) %C(dim blue)(%ar)%C (reset)' --all
     mcad  = "!f() { git log --pretty='format:%C(yellow)%h %aD%Cred%d %Creset%s%C(cyan) [%cn]' --decorate --after=\"$1 0:00\" --before=\"$1 23:59\" --author \"`git config user.name`\"; }; f"
     ; mlcbc = "!f() { git log --first-parent --abbrev-commit --author \"`git config user.name`\" --pretty=format:'%C(dim white)- %C(reset)%C(yellow)[%h]%C(reset) %C(white)%s%C(reset) %C(cyan)(%an)%C(reset) %C(dim white)%aD%C(reset)'; }; f"
-    mlcbc  = "! git log --oneline --color --author=\"`git config user.name`\" | emojify | less -r"
     plg   = git log --graph --pretty='format:%C(red)%d%C(reset) %C(yellow)%h%C(reset) %ar %C(green)%aN%C(reset) %s'
     plog  = log --graph --pretty=format:'%h -%d %s %n' --abbrev-commit --date=relative --branches
     tlg   = ! git log --stat --since='1 Day Ago' --graph --pretty=oneline --abbrev-commit --date=relative
