--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -109,8 +109,10 @@ unbind -T copy-mode 'MouseDragEnd1Pane'
 # }
 
 # Edit the number of colors to show
-set -g default-terminal "tmux-256color"
-set-option -ga terminal-overrides ",xterm-termite:Tc"
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+#set -g default-terminal "tmux-256color"
+#set-option -ga terminal-overrides ",xterm-termite:Tc"
 
 # =============================================================================
 # Theme
@@ -184,7 +186,10 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
+# Auto install tpm
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
-
 
