feat(update) install whichkey + update keybinding

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -1,3 +1,6 @@
 {
-    "coc.preferences.minTriggerInputLength": 2
+    "coc.preferences.minTriggerInputLength": 2,
+    "prettier.requireConfig": true,
+    "eslint.autoFixOnSave": true,
+    "tslint.autoFixOnSave": true
 }
