feat(tmux) change tmux theme

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -163,21 +163,43 @@ set-window-option -g window-status-bell-style fg=colour235,bg=colour167 #bg, red
 
 
 ## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
-set-option -g status-style none
-set-option -g status-justify "left"
-set-option -g status-left-style none
-set-option -g status-left-length "80"
-set-option -g status-right-style none
-set-option -g status-right-length "80"
-set-window-option -g window-status-activity-style none
-set-window-option -g window-status-style none
-set-window-option -g window-status-separator ""
-
-set-option -g status-left "#[fg=colour248, bg=colour241] #S #[fg=colour241, bg=colour237, nobold, noitalics, nounderscore]"
-set-option -g status-right "#[fg=colour239, bg=colour237, nobold, nounderscore, noitalics]#[fg=colour246,bg=colour239] CPU:#{cpu_percentage}  #{battery_icon}#{battery_percentage}  %a, %d %b %Y  %H:%M #[fg=colour248, bg=colour239, nobold, noitalics, nounderscore]#[fg=colour237, bg=colour248] #h "
-
-set-window-option -g window-status-current-format "#[fg=colour239, bg=colour248, :nobold, noitalics, nounderscore]#[fg=colour239, bg=colour214] #I #[fg=colour239, bg=colour214, bold] #W #[fg=colour214, bg=colour237, nobold, noitalics, nounderscore]"
-set-window-option -g window-status-format "#[fg=colour237,bg=colour239,noitalics]#[fg=colour223,bg=colour239] #I #[fg=colour223, bg=colour239] #W #[fg=colour239, bg=colour237, noitalics]"
+# Basic status bar colors
+set -g status-style bg=black,fg=cyan
+# Window status
+set -g window-status-format " #I:#W#F "
+set -g window-status-current-format " #I:#W#F "
+# Current window status
+set -g window-status-current-style bg=red,fg=black
+# Window with activity status
+set -g window-status-activity-style bg=black,fg=yellow
+# Window separator
+set -g window-status-separator ""
+# Window status alignment
+set -g status-justify centre
+# Pane border
+set -g pane-border-style bg=default,fg=default
+# Active pane border
+set -g pane-active-border-style bg=default,fg=green
+# Pane number indicator
+set -g display-panes-colour default
+set -g display-panes-active-colour default
+# Clock mode
+set -g clock-mode-colour red
+set -g clock-mode-style 24
+# Message
+set -g message-style bg=default,fg=default
+# Command message
+set -g message-command-style bg=default,fg=default
+# Mode
+set -g mode-style bg=red,fg=default
+# Left side of status bar
+set -g status-left-style bg=black,fg=green
+set -g status-left-length 60
+set -g status-left "#S #[fg=white]» #[fg=yellow]#I #[fg=cyan]#P"
+# Right side of status bar
+set -g status-right-style bg=black,fg=cyan
+set -g status-right-length 60
+set -g status-right "#H « #{battery_icon}#{battery_percentage} « #{cpu_percentage} #[fg=white]« #[fg=yellow]%a, %d %b %Y #[fg=green]%H:%M"
 
 
 # List of plugins
