--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -199,7 +199,7 @@ set -g status-left "#S #[fg=white]» #[fg=yellow]#I #[fg=cyan]#P"
 # Right side of status bar
 set -g status-right-style bg=black,fg=cyan
 set -g status-right-length 60
-set -g status-right "#H « #{battery_icon}#{battery_percentage} « #{cpu_percentage} #[fg=white]« #[fg=yellow]%a, %d %b %Y #[fg=green]%H:%M"
+set -g status-right "#H « #{battery_percentage} « #{cpu_percentage} #[fg=white]« #[fg=yellow]%a, %d %b %Y #[fg=green]%H:%M"
 
 
 # List of plugins
