--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -194,12 +194,12 @@ set -g message-command-style bg=default,fg=default
 set -g mode-style bg=red,fg=default
 # Left side of status bar
 set -g status-left-style bg=black,fg=green
-set -g status-left-length 60
-set -g status-left "#S #[fg=white]» #[fg=yellow]#I #[fg=cyan]#P"
+set -g status-left-length 40
+set -g status-left "#S #[fg=white]» #[fg=yellow]#I #[fg=cyan]#P » #H"
 # Right side of status bar
 set -g status-right-style bg=black,fg=cyan
-set -g status-right-length 60
-set -g status-right "#H « #{battery_percentage} « #{cpu_percentage} #[fg=white]« #[fg=yellow]%a, %d %b %Y #[fg=green]%H:%M"
+set -g status-right-length 40
+set -g status-right "#{battery_percentage} « #{cpu_percentage} #[fg=white]« #[fg=yellow]%a, %d %b %Y #[fg=green]%H:%M"
 
 
 # List of plugins
