--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,7 +22,7 @@ set-window-option -g automatic-rename on
 set-option -g set-titles on
 
 # Status refresh
-set -g status-interval 1
+set -g status-interval 60
 
 
 # =============================================================================
@@ -67,10 +67,10 @@ unbind -T copy-mode 'MouseDragEnd1Pane'
     # }
 
     # Swap {
-        bind -n M-S-Left swap-window -t -1
-        bind -n M-S-Down swap-window -t -1
-        bind -n M-S-Up swap-window -t +1
-        bind -n M-S-Right swap-window -t +1
+        bind -n M-S-Left swap-window -t -1 \; select-window -t -1
+        bind -n M-S-Down swap-window -t -1 \; select-window -t -1
+        bind -n M-S-Up swap-window -t +1 \; select-window -t +1
+        bind -n M-S-Right swap-window -t +1 \; select-window -t +1
     # }
 
     # New {
@@ -87,12 +87,12 @@ unbind -T copy-mode 'MouseDragEnd1Pane'
     bind-key -n M-j if-shell "$is_vim" "send-keys M-j"  "select-pane -D"
     bind-key -n M-k if-shell "$is_vim" "send-keys M-k"  "select-pane -U"
     bind-key -n M-l if-shell "$is_vim" "send-keys M-l"  "select-pane -R"
-    bind-key -n M-\ if-shell "$is_vim" "send-keys M-\\" "select-pane -l"
+    #bind-key -n M-\ if-shell "$is_vim" "send-keys M-\\" "select-pane -l"
     bind-key -T copy-mode-vi M-h select-pane -L
     bind-key -T copy-mode-vi M-j select-pane -D
     bind-key -T copy-mode-vi M-k select-pane -U
     bind-key -T copy-mode-vi M-l select-pane -R
-    bind-key -T copy-mode-vi M-\ select-pane -l
+    #bind-key -T copy-mode-vi M-\ select-pane -l
     # }
 
     # Resize {
@@ -126,50 +126,14 @@ set -ga terminal-overrides ",*256col*:Tc"
 # Theme
 # =============================================================================
 
-## COLORSCHEME: gruvbox dark
-set-option -g status "on"
-
-# default statusbar colors
-set-option -g status-bg colour237 #bg1
-set-option -g status-fg colour223 #fg1
-
-# default window title colors
-set-window-option -g window-status-style bg=colour214,fg=colour237 #yellow
-
-set-window-option -g window-status-activity-style bg=colour237,fg=colour248 #bg1
-
-# active window title colors
-set-window-option -g window-status-current-style bg=default,fg=colour237
-
-# pane border
-set-option -g pane-active-border-style fg=colour250 #fg2
-set-option -g pane-border-style fg=colour237 #bg1
-
-# message infos
-set-option -g message-style bg=colour239,fg=colour223 #bg2
-
-# writting commands inactive
-set-option -g message-command-style bg=colour239,fg=colour223 #fg3
-
-# pane number display
-set-option -g display-panes-active-colour colour250 #fg2
-set-option -g display-panes-colour colour237 #bg1
-
-# clock
-set-window-option -g clock-mode-colour colour109 #blue
-
-# bell
-set-window-option -g window-status-bell-style fg=colour235,bg=colour167 #bg, red
-
-
 ## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
 # Basic status bar colors
-set -g status-style bg=black,fg=cyan
+set -g status-style bright,bg='#1B2B34',fg=default
 # Window status
 set -g window-status-format " #I:#W#F "
 set -g window-status-current-format " #I:#W#F "
 # Current window status
-set -g window-status-current-style bg=red,fg=black
+set -g window-status-current-style fg=colour114,bg=default,bright
 # Window with activity status
 set -g window-status-activity-style bg=black,fg=yellow
 # Window separator
@@ -177,9 +141,9 @@ set -g window-status-separator ""
 # Window status alignment
 set -g status-justify centre
 # Pane border
-set -g pane-border-style bg=default,fg=default
+set -g pane-border-style fg='#343D46',bg=colour0
 # Active pane border
-set -g pane-active-border-style bg=default,fg=green
+set -g pane-active-border-style fg=colour3,bg=colour0
 # Pane number indicator
 set -g display-panes-colour default
 set -g display-panes-active-colour default
@@ -187,31 +151,31 @@ set -g display-panes-active-colour default
 set -g clock-mode-colour red
 set -g clock-mode-style 24
 # Message
-set -g message-style bg=default,fg=default
+set -g message-style fg=colour5,bg=default
 # Command message
 set -g message-command-style bg=default,fg=default
 # Mode
-set -g mode-style bg=red,fg=default
+set -g mode-style fg=colour3
+# visual notification of activity in other windows
+set -g monitor-activity on
 # Left side of status bar
-set -g status-left-style bg=black,fg=green
+set -g status-left-style fg=green
 set -g status-left-length 60
-set -g status-left "#S #[fg=white]» #[fg=yellow]#I #[fg=cyan]#P » #H"
+set -g status-left "#[fg=magenta][#S]#[fg=colour8]"
 # Right side of status bar
-set -g status-right-style bg=black,fg=cyan
+set -g status-right-style fg=cyan
 set -g status-right-length 60
-set -g status-right "#{battery_percentage} « #{cpu_percentage} #[fg=white]« #[fg=yellow]%a, %d %b %Y #[fg=green]%H:%M"
+set -g status-right "#[fg=yellow]#[fg=yellow,bold,bg=default] %a, %d %b %Y #[fg=colour8]‹#[fg=green,bg=default]#[bg=default,fg=green,bold] %H:%M#[fg=blue]"
 
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+# set -g @plugin 'github_username/plugin_name'
 
 # Other examples:
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'tmux-plugins/tmux-open'
-# set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
