--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -1,10 +1,10 @@
 {
     "eslint.autoFixOnSave": true,
     "list.source.files.command": "rg",
-    "list.source.files.args": ["--no-ignore", "--files", "--glob", "!.git"],
+    "list.source.files.args": ["--hidden", "--no-ignore", "--files", "--glob", "!.git/*", "--glob", "!node_modules/*", "--glob", "!build/*", "--glob", "!dist/*"],
     "list.source.grep.command": "rg",
     "list.source.grep.args": ["--hidden", "--vimgrep", "--heading", "-S"],
-    "list.source.mru.excludePatterns": ["**/.git/*", "/tmp/*", "node_modules/", "build/", "dist/", ".idea/", "rabbit_topology/"],
+    "list.source.mru.excludePatterns": ["**/.git/*", "/tmp/*", "**/node_modules/*", "**/build/*", "**/dist/*", "**/.idea/*", "**/rabbit_topology/*"],
     "prettier.requireConfig": true,
     "suggest.echodocSupport": true,
     "suggest.maxCompleteItemCount": 20,
