feat(ide terminal) update neovim config

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -8,5 +8,6 @@
     "prettier.requireConfig": true,
     "suggest.echodocSupport": true,
     "suggest.maxCompleteItemCount": 20,
-    "tslint.autoFixOnSave": true
+    "tslint.autoFixOnSave": true,
+    "tsserver.trace.server": "verbose"
 }
