--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -54,71 +54,75 @@ unbind -T copy-mode-vi 'MouseDragEnd1Pane'
 unbind -T copy-mode 'MouseDragEnd1Pane'
 
 # Window {
-    # Focus {
-        bind -n M-Left select-window -t -1
-        bind -n M-Down select-window -t -1
-        bind -n M-Up select-window -t +1
-        bind -n M-Right select-window -t +1
-    # }
+   # Focus {
+      bind -n M-Left select-window -t -1
+      bind -n M-Down select-window -t -1
+      bind -n M-Up select-window -t +1
+      bind -n M-Right select-window -t +1
+   # }
 
-    # Split {
-        bind '"' split-window -v -c "#{pane_current_path}"
-        bind % split-window -h -c "#{pane_current_path}"
-    # }
+   # Split {
+      bind '"' split-window -v -c "#{pane_current_path}"
+      bind % split-window -h -c "#{pane_current_path}"
+   # }
 
-    # Swap {
-        bind -n M-S-Left swap-window -t -1 \; select-window -t -1
-        bind -n M-S-Down swap-window -t -1 \; select-window -t -1
-        bind -n M-S-Up swap-window -t +1 \; select-window -t +1
-        bind -n M-S-Right swap-window -t +1 \; select-window -t +1
-    # }
+   # Swap {
+      bind -n M-S-Left swap-window -t -1 \; select-window -t -1
+      bind -n M-S-Down swap-window -t +1 \; select-window -t +1
+      bind -n M-S-Up swap-window -t -1 \; select-window -t -1
+      bind -n M-S-Right swap-window -t +1 \; select-window -t +1
+   # }
 
-    # New {
-        bind c new-window -c "#{pane_current_path}"
-    # }
+   # New {
+      bind c new-window -c "#{pane_current_path}"
+   # }
 # }
 
 # Panel {
-    # Focus {
-# Vim like shortcuts
-    is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-        | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-    bind-key -n M-h if-shell "$is_vim" "send-keys M-h"  "select-pane -L"
-    bind-key -n M-j if-shell "$is_vim" "send-keys M-j"  "select-pane -D"
-    bind-key -n M-k if-shell "$is_vim" "send-keys M-k"  "select-pane -U"
-    bind-key -n M-l if-shell "$is_vim" "send-keys M-l"  "select-pane -R"
-    #bind-key -n M-\ if-shell "$is_vim" "send-keys M-\\" "select-pane -l"
-    bind-key -T copy-mode-vi M-h select-pane -L
-    bind-key -T copy-mode-vi M-j select-pane -D
-    bind-key -T copy-mode-vi M-k select-pane -U
-    bind-key -T copy-mode-vi M-l select-pane -R
-    #bind-key -T copy-mode-vi M-\ select-pane -l
-    # }
+   # Focus {
+      # Vim like shortcuts
+      is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+          | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+      bind-key -n M-h if-shell "$is_vim" "send-keys M-h"  "select-pane -L"
+      bind-key -n M-j if-shell "$is_vim" "send-keys M-j"  "select-pane -D"
+      bind-key -n M-k if-shell "$is_vim" "send-keys M-k"  "select-pane -U"
+      bind-key -n M-l if-shell "$is_vim" "send-keys M-l"  "select-pane -R"
+      #bind-key -n M-\ if-shell "$is_vim" "send-keys M-\\" "select-pane -l"
+      bind-key -T copy-mode-vi M-h select-pane -L
+      bind-key -T copy-mode-vi M-j select-pane -D
+      bind-key -T copy-mode-vi M-k select-pane -U
+      bind-key -T copy-mode-vi M-l select-pane -R
+      #bind-key -T copy-mode-vi M-\ select-pane -l
+   # }
 
-    # Resize {
-        bind H resize-pane -L 5
-        bind J resize-pane -D 5
-        bind K resize-pane -U 5
-        bind L resize-pane -R 5
-        # Normal shortcuts
-        bind -n M-C-Left resize-pane -L 5
-        bind -n M-C-Down resize-pane -D 5
-        bind -n M-C-Up resize-pane -U 5
-        bind -n M-C-Right resize-pane -R 5
-    # }
+   # Resize {
+      bind H resize-pane -L 5
+      bind J resize-pane -D 5
+      bind K resize-pane -U 5
+      bind L resize-pane -R 5
+      # Normal shortcuts
+      bind -n M-C-h resize-pane -L 5
+      bind -n M-C-j resize-pane -D 5
+      bind -n M-C-k resize-pane -U 5
+      bind -n M-C-l resize-pane -R 5
+   # }
 
-    # Swap {
-        # Vim like shortcuts
-        bind -n M-H swap-pane -t -1
-        bind -n M-J swap-pane -t -1
-        bind -n M-K swap-pane -t +1
-        bind -n M-L swap-pane -t +1
-    # }
+   # Swap {
+      # Vim like shortcuts
+      bind -n M-H swap-pane -s '{left-of}'
+      bind -n M-J swap-pane -s '{down-of}'
+      bind -n M-K swap-pane -s '{up-of}'
+      bind -n M-L swap-pane -s '{right-of}'
+   # }
 # }
+
+# Clear the screen
+bind -n M-C-x send-keys -R \; send-keys C-l \; clear-history
 
 # Edit the number of colors to show
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",*256col*:Tc"
+set -gw xterm-keys on
 #set -g default-terminal "tmux-256color"
 #set-option -ga terminal-overrides ",xterm-termite:Tc"
 
