--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -12,7 +12,7 @@
 set $mod Mod4
 
 set $gapsValueInner 10
-set $gapsValueOuter 5
+set $gapsValueOuter 0
 set $term termite
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -38,7 +38,7 @@ floating_modifier $mod
 bindsym $mod+Return exec $term
 
 # kill focused window
-bindsym $mod+Shift+c kill
+bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 # bindsym $mod+d exec dmenu_run -nb "$fg" -nf "$bg" -sb "$bg" -sf "$fg"
@@ -46,8 +46,8 @@ bindsym $mod+Shift+c kill
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 #bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-bindsym $mod+d exec --no-startup-id ~/.scripts/rofi.sh -d
-bindsym Mod1+Tab exec --no-startup-id ~/.scripts/rofi.sh -w
+bindsym $mod+d exec --no-startup-id $XDG_DATA_HOME/scripts/rofi.sh -d
+bindsym Mod1+Tab exec --no-startup-id $XDG_DATA_HOME/scripts/rofi.sh -w
 
 # change focus
 bindsym $mod+h focus left
@@ -228,24 +228,24 @@ mode "$mode_screen_capture" {
 # ==============================================================================
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-set_from_resource $fg i3wm.foreground #f0f0f0
-set_from_resource $bg i3wm.background #f0f0f0
-set_from_resource $color0 i3wm.color0 #f0f0f0
-set_from_resource $color1 i3wm.color1 #f0f0f0
-set_from_resource $color2 i3wm.color2 #f0f0f0
-set_from_resource $color3 i3wm.color3 #f0f0f0
-set_from_resource $color4 i3wm.color4 #f0f0f0
-set_from_resource $color5 i3wm.color5 #f0f0f0
-set_from_resource $color6 i3wm.color6 #f0f0f0
-set_from_resource $color7 i3wm.color7 #f0f0f0
-set_from_resource $color8 i3wm.color8 #f0f0f0
-set_from_resource $color9 i3wm.color9 #f0f0f0
-set_from_resource $color10 i3wm.color10 #f0f0f0
-set_from_resource $color11 i3wm.color11 #f0f0f0
-set_from_resource $color12 i3wm.color12 #f0f0f0
-set_from_resource $color13 i3wm.color13 #f0f0f0
-set_from_resource $color14 i3wm.color14 #f0f0f0
-set_from_resource $color15 i3wm.color15 #f0f0f0
+set_from_resource	$fg		i3wm.foreground	#f0f0f0
+set_from_resource 	$bg		i3wm.background #f0f0f0
+set_from_resource 	$color0		i3wm.color0	#f0f0f0
+set_from_resource 	$color1		i3wm.color1 	#f0f0f0
+set_from_resource 	$color2		i3wm.color2 	#f0f0f0
+set_from_resource 	$color3 	i3wm.color3 	#f0f0f0
+set_from_resource 	$color4 	i3wm.color4 	#f0f0f0
+set_from_resource 	$color5 	i3wm.color5 	#f0f0f0
+set_from_resource 	$color6 	i3wm.color6 	#f0f0f0
+set_from_resource 	$color7 	i3wm.color7 	#f0f0f0
+set_from_resource 	$color8 	i3wm.color8 	#f0f0f0
+set_from_resource 	$color9 	i3wm.color9 	#f0f0f0
+set_from_resource 	$color10	i3wm.color10	#f0f0f0
+set_from_resource 	$color11 	i3wm.color11 	#f0f0f0
+set_from_resource 	$color12 	i3wm.color12 	#f0f0f0
+set_from_resource 	$color13 	i3wm.color13 	#f0f0f0
+set_from_resource 	$color14 	i3wm.color14 	#f0f0f0
+set_from_resource 	$color15 	i3wm.color15 	#f0f0f0
 
 
 
@@ -269,12 +269,12 @@ bar {
 # ==============================================================================
 # Colors
 # ==============================================================================
-# class                 border  backgr. text indicator child_border
-client.focused          $bg     $bg     $fg  $bg       $color8
-client.focused_inactive $bg     $bg     $fg  $bg       $bg
-client.unfocused        $color8     $color8 $fg  $bg       $bg
-client.urgent           $color1 $color9 $fg  $color1   $color1
-client.placeholder      #000000 #0c0c0c #ffffff #0c0c0c   #0c0c0c
+# class			border	backgr.	text	indicator	child_border
+client.focused		$bg	$bg	$fg	$bg		$bg
+client.focused_inactive	$bg	$color7	$bg	$bg		$color7
+client.unfocused	$bg	$color8	$fg	$bg		$color8
+client.urgent		$color1 $color9	$fg	$color1		$color1
+client.placeholder	#000000	#0c0c0c #ffffff #0c0c0c   #0c0c0c
 
 client.background       $bg
 
@@ -288,7 +288,7 @@ client.background       $bg
 #new_float none
 hide_edge_borders smart
 # hide_edge_borders smart_no_gaps
-# smart_gaps on
+smart_gaps on
 for_window [class="^.*"] border pixel 6
 #for_window [class="^.*"] border none
 
@@ -297,8 +297,8 @@ floating_minimum_size 100 x 100
 floating_maximum_size 1280 x 720
 
 # Gaps
-# gaps inner $gapsValueInner
-# gaps outer $gapsValueOuter
+gaps inner $gapsValueInner
+gaps outer $gapsValueOuter
 
 # Set pop up as floating window
 for_window [window_role="pop-up"] floating enable
@@ -329,9 +329,14 @@ workspace_layout tabbed
 # ==============================================================================
 # Focus urgent workspace
 bindsym $mod+u [urgent=latest] focus
+# Show window on all desktops
+bindsym Shift+$mod+w sticky toggle
 # Function keys
 bindsym F1 exec --no-startup-id echo "I don't need help" > /dev/null
 bindsym F11 fullscreen toggle
+# Emoji
+bindsym $mod+Shift+e exec --no-startup-id rofimoji
+bindsym $mod+Shift+c exec --no-startup-id $XDG_DATA_HOME/scripts/rofi_clipboard.sh
 
 # Modes
 bindsym $mod+r mode "$mode_resize"
@@ -339,7 +344,7 @@ bindsym $mod+Pause mode "$mode_system"
 bindsym $mod+Print mode "$mode_screen_capture"
 
 # Projection
-bindsym XF86Display exec --no-startup-id $term -e "bash -c ~/.scripts/show-screens.sh"
+bindsym XF86Display exec --no-startup-id arandr
 
 # Maximize and minimize
 bindsym $mod+m scratchpad show
@@ -347,12 +352,12 @@ bindsym $mod+n move scratchpad
 
 # Sofwares shortcut
 bindsym $mod+f exec --no-startup-id pcmanfm
-bindsym Shift+$mod+e exec --no-startup-id $term -e "ranger"
 bindsym $mod+p exec --no-startup-id $term -e "ncmpcpp"
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 5 # increase screen brightness
-bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 5 # decrease screen brightness
+set $refresh_i3status killall -SIGUSR1 i3status
+bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 5 && xbacklight | cut -d. -f1 > $HOME/.cache/brightness && $refresh_i3status
+bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 5 && xbacklight | cut -d. -f1 > $HOME/.cache/brightness && $refresh_i3status
 
 # Sound controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%
@@ -367,14 +372,6 @@ bindsym XF86AudioMicMute exec --no-startup-id amixer sset Capture toggle
 # ==============================================================================
 # Startup applications
 # ==============================================================================
-# Need to kill and restart compton against invisible tabbed windows bug on refresh
-exec_always --no-startup-id killall -q compton while pgrep -x compton >/dev/null; do sleep 1; done compton -b -d :0
-exec --no-startup-id compton -b -d :0
-#exec --no-startup-id $HOME/.scripts/launch_dunst.sh
-#exec --no-startup-id MONITOR=eDP1 polybar -r primary
-exec --no-startup-id [ ! -s $XDG_DATA_HOME/mpd/pid ] && mpd
-exec --no-startup-id nm-applet &
 exec_always --no-startup-id feh --bg-center "$HOME/Pictures/Wallpapers/wallhaven-37411.jpg"
-exec --no-startup-id killall redshift; redshift -l 50.4:3.8
-exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec --no-startup-id $XDG_DATA_HOME/scripts/autostart.sh
 
