Rename pulseaudio output

--- a/mpd/.config/mpd/mpd.conf
+++ b/mpd/.config/mpd/mpd.conf
@@ -283,7 +283,7 @@ audio_output {
 #
 audio_output {
 	type		"pulse"
-	name		"My Pulse Output"
+	name		"Pulse Audio"
 ##	server		"remote_server"		# optional
 ##	sink		"remote_server_sink"	# optional
 }
